# MVNtoSteamVR

./: CMakeLists.txt
cmake/: FindXSTypes.cmake
src/: angularsegmentkinematicsdatagram.cpp  centerofmassdatagram.cpp  centerofmassdatagram.h  datagram.cpp  datagram.h  eulerdatagram.cpp  jointanglesdatagram.cpp  jointanglesdatagram.h  linearsegmentkinematicsdatagram.cpp  main.cpp  metadatagram.cpp  metadatagram.h  parsermanager.cpp  positiondatagram.cpp  positiondatagram.h  quaterniondatagram.cpp  quaterniondatagram.h  scaledatagram.cpp  scaledatagram.h  streamer.cpp  timecodedatagram.cpp  trackerkinematicsdatagram.cpp  udpserver.cpp  udpserver.h
